Added UI and included/excluded shows

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 tvtime.user=${TVTIME_USER}
 tvtime.password=${TVTIME_PASSWORD}
 plex.user.list=${PLEX_USERS}
+
+plex.shows.exclude=${PLEX_SHOWS_EXCLUDE:}
+plex.shows.include=${PLEX_SHOWS_INCLUDE:}
