--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ plex.user.list=${PLEX_USERS}
 
 plex.shows.exclude=${PLEX_SHOWS_EXCLUDE:}
 plex.shows.include=${PLEX_SHOWS_INCLUDE:}
+logging.level.com.zggis=${LOGGING_LEVEL:INFO}
