Fixed plex user mapping

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 account-config:
   accounts:
-    - tvtimeUser: ${TVTIME_USER}
+    -
+      tvtimeUser: ${TVTIME_USER}
       tvtimePassword: ${TVTIME_PASSWORD}
       plexUsers: ${PLEX_USERS}
       plexShowsExclude: ${PLEX_SHOWS_EXCLUDE:}
