Fixed docker compose files

--- a/example-configs/.env
+++ b/example-configs/.env
@@ -4,4 +4,4 @@ TVTIME_PASSWORD=tvtimePassword
 PLEX_USERS=plexUser1,plexUser2
 
 #Advanced Config (Multiple TVTime Users)
-#SPRING_CONFIG_LOCATION=/config
+#SPRING_CONFIG_LOCATION=/config/application.yaml
