--- a/example-configs/docker-compose.yaml
+++ b/example-configs/docker-compose.yaml
@@ -8,5 +8,5 @@ services:
       - 8080:8080
     #Volume only needed for advanced configuration (multiple TVTime users)
     volumes:
-      - "C:/location/of/application.yaml":/config
+      - "C:/location/of/yaml/:/config"
 
