--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 account-config:
   accounts:
-    - tvtimeUser: ${TVTIME_USER}
+    -
+      tvtimeUser: ${TVTIME_USER}
       tvtimePassword: ${TVTIME_PASSWORD}
       plexUsers: ${PLEX_USERS}
       plexShowsExclude: ${PLEX_SHOWS_EXCLUDE:}
@@ -13,5 +14,9 @@ logging:
     name: ${logfile.dir}/plex-tvtime.log
 logfile:
   dir: /logs
+track-movies: ${TRACK_MOVIES:false}
 server:
   port: ${SERVER_PORT:8080}
+
+
+
