--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,5 +15,6 @@ logging:
 logfile:
   dir: /logs
 track-movies: ${TRACK_MOVIES:false}
+mark-previous-episodes: ${MARK_PREVIOUS_EPISODES:false}
 server:
   port: ${SERVER_PORT:8080}
